test/fail/mixins/System2.mo
mixin <system>() {
  func g<system>() {};
  g<system>();
}
